--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
     ~/.config/fish:
       create: true
       path: config/fish
+      if: '[ `uname` = Darwin ]'
     ~/.config/alacritty:
       create: true
       path: config/alacritty
@@ -40,3 +41,8 @@
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
+  -
+    command: script/install-doom-emacs.sh
+    stdin: true
+    stdout: true
+    description: Installing/Updating Doom Emacs
