--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -142,12 +142,12 @@ run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
-# copy to macOS clipboard
-if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
-if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 # copy to X11 clipboard
 if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
 if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# copy to macOS clipboard
+if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
+if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 # copy to Windows clipboard
 if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
 if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
@@ -189,7 +189,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #
 # _uname_s=$(uname -s)
 #
-# _tmux_version=$(tmux -V | tr -cd '0123456789.' | cut -d' ' -f2 | awk -F '.' '{print $1 * 100 + $2}')
+# _tmux_version=$(tmux -V | awk '{print ($2+0) * 100}')
 #
 # _is_enabled() {
 #   [ x"$1" = x"true" ] || [ x"$1" = x"yes" ] || [ x"$1" = x"enabled" ] || [ x"$1" = x"1" ]
@@ -303,7 +303,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #         discharging=$(grep -qi "discharging" "$batpath/status" && echo "true" || echo "false")
 #         bat_capacity="$batpath/capacity"
 #         if [ -r "$bat_capacity" ]; then
-#           charge=$(awk -v charge="$charge" -v capacity="$(cat "$bat_capacity")" 'BEGIN { print charge + capacity / 100 }')
+#           charge=$(awk -v charge="$charge" -v capacity="$(cat "$bat_capacity")" 'BEGIN { print charge + (capacity > 100 ? 100 : capacity) / 100 }')
 #         else
 #           bat_energy_full="$batpath/energy_full"
 #           bat_energy_now="$batpath/energy_now"
@@ -776,10 +776,10 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   fi
 #
 #   tmux_conf_copy_to_os_clipboard=${tmux_conf_copy_to_os_clipboard:-false}
-#   command -v pbcopy > /dev/null 2>&1 && command='pbcopy'
-#   command -v reattach-to-user-namespace > /dev/null 2>&1 && command='reattach-to-user-namespace pbcopy'
 #   command -v xsel > /dev/null 2>&1 && command='xsel -i -b'
 #   ! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1 && command='xclip -i -selection clipboard > \/dev\/null 2>\&1'
+#   command -v pbcopy > /dev/null 2>&1 && command='pbcopy'
+#   command -v reattach-to-user-namespace > /dev/null 2>&1 && command='reattach-to-user-namespace pbcopy'
 #   command -v clip.exe > /dev/null 2>&1 && command='clip\.exe'
 #   [ -c /dev/clipboard ] && command='cat > \/dev\/clipboard'
 #
@@ -1211,9 +1211,9 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #           -e 's/#\{(\?)?battery_percentage/#\{\1@battery_percentage/g')
 #         status_right="#(printf '\n'; nice cut -c3- ~/.tmux.conf | sh -s _battery_status \"$tmux_conf_battery_status_charging\" \"$tmux_conf_battery_status_discharging\")$status_right"
 #         interval=60
-#         if [ $_tmux_version -ge 302 ]; then
+#         if [ $_tmux_version -ge 320 ]; then
 #           tmux run -b "trap 'exit 0' TERM; while :; do nice cut -c3- ~/.tmux.conf | sh -s _battery_bar \"$tmux_conf_battery_bar_symbol_full\" \"$tmux_conf_battery_bar_symbol_empty\" \"$tmux_conf_battery_bar_length\" \"$tmux_conf_battery_bar_palette\" \"$tmux_conf_battery_hbar_palette\" \"$tmux_conf_battery_vbar_palette\"; sleep $interval; done"
-#         elif [ $_tmux_version -gt 204 ]; then
+#         elif [ $_tmux_version -gt 240 ]; then
 #           status_right="#(printf '\n'; while :; do nice cut -c3- ~/.tmux.conf | sh -s _battery_bar \"$tmux_conf_battery_bar_symbol_full\" \"$tmux_conf_battery_bar_symbol_empty\" \"$tmux_conf_battery_bar_length\" \"$tmux_conf_battery_bar_palette\" \"$tmux_conf_battery_hbar_palette\" \"$tmux_conf_battery_vbar_palette\"; sleep $interval; done)$status_right"
 #         else
 #           status_right="#(nice cut -c3- ~/.tmux.conf | sh -s _battery_bar \"$tmux_conf_battery_bar_symbol_full\" \"$tmux_conf_battery_bar_symbol_empty\" \"$tmux_conf_battery_bar_length\" \"$tmux_conf_battery_bar_palette\" \"$tmux_conf_battery_hbar_palette\" \"$tmux_conf_battery_vbar_palette\")$status_right"
@@ -1264,9 +1264,9 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #           interval=$(tmux show -gv status-interval)
 #           ;;
 #       esac
-#       if [ $_tmux_version -ge 302 ]; then
+#       if [ $_tmux_version -ge 320 ]; then
 #         tmux run -b "trap 'exit 0' TERM; while :; do nice cut -c3- ~/.tmux.conf | sh -s _uptime; sleep $interval; done"
-#       elif [ $_tmux_version -gt 204 ]; then
+#       elif [ $_tmux_version -gt 240 ]; then
 #         status_right="#(printf '\n'; while :; do nice cut -c3- ~/.tmux.conf | sh -s _uptime; sleep $interval; done)$status_right"
 #       else
 #         status_right="#(nice cut -c3- ~/.tmux.conf | sh -s _uptime)$status_right"
@@ -1282,9 +1282,9 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       status_right=$(echo "$status_right" | sed -E \
 #         -e 's/#\{(\?)?loadavg/#\{\1@loadavg/g')
 #       interval=$(tmux show -gv status-interval)
-#       if [ $_tmux_version -ge 302 ]; then
+#       if [ $_tmux_version -ge 320 ]; then
 #         tmux run -b "trap 'exit 0' TERM; while :; do nice cut -c3- ~/.tmux.conf | sh -s _loadavg; sleep $interval; done"
-#       elif [ $_tmux_version -gt 204 ]; then
+#       elif [ $_tmux_version -gt 240 ]; then
 #         status_right="#(printf '\n'; while :; do nice cut -c3- ~/.tmux.conf | sh -s _loadavg; sleep $interval; done)$status_right"
 #       else
 #         status_right="#(nice cut -c3- ~/.tmux.conf | sh -s _loadavg)$status_right"
@@ -1360,7 +1360,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #     tmux display 'Done installing tpm and plugins...'
 #   fi
 #   "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
-#   if [ -z "$window_active" ] && [ $_tmux_version -lt 204 ]; then
+#   if [ -z "$window_active" ] && [ $_tmux_version -lt 240 ]; then
 #     tmux run -b "sleep $(expr $(tmux display -p '#{display-time}') / 500) && tmux set display-time 3000 \; display 'This configuration will soon require tmux 2.4+' \; set -u display-time"
 #   fi
 # }
@@ -1371,7 +1371,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   if [ -n "$(tmux show -gv '@plugin')" ] || [ -n "$(tmux show -gv '@tpm_plugins')" ]; then
 #     tmux run -b "cut -c3- ~/.tmux.conf | sh -s __apply_plugins \"$window_active\" \"$tmux_conf_update_plugins_on_launch\" \"$tmux_conf_update_plugins_on_reload\""
 #   elif [ -z "$window_active" ]; then
-#     if [ $_tmux_version -lt 204 ]; then
+#     if [ $_tmux_version -lt 240 ]; then
 #       tmux run -b 'tmux set display-time 3000 \; display "This configuration will soon require tmux 2.4+" \; set -u display-time'
 #     fi
 #   fi
@@ -1393,7 +1393,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       tmux run -b 'tmux set display-time 3000 \; display "This configuration requires awk" \; set -u display-time \; run "sleep 3" \; kill-server'
 #       return
 #     fi
-#     if [ $_tmux_version -lt 203 ]; then
+#     if [ $_tmux_version -lt 230 ]; then
 #       tmux run -b 'tmux set display-time 3000 \; display "This configuration requires tmux 2.3+" \; set -u display-time \; run "sleep 3" \; kill-server'
 #       return
 #     fi
