--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -3,7 +3,7 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+# env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
@@ -12,6 +12,7 @@
   # available, otherwise 'xterm-256color' is used.
   #
   # TERM: alacritty-256color
+  # TERM: alacritty
 
 window:
   # Window dimensions (changes require restart)
@@ -89,22 +90,26 @@ scrolling:
   #faux_multiplier: 3
 
 # Font configuration (changes require restart)
+# Font configuration (changes require restart)
 font:
   # Normal (roman) font face
   normal:
-    family: Source Code Pro
+    # family: Source Code Pro for Powerline
+    family: SauceCodePro Nerd Font Mono
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   # Italic font face
   bold:
-    family: Source Code Pro
+    # family: Source Code Pro for Powerline
+    family: SauceCodePro Nerd Font Mono
     # The `style` can be specified to pick a specific face.
     style: Bold
 
   # Italic font face
   italic:
-    family: Source Code Pro
+    # family: Source Code Pro for Powerline
+    family: SauceCodePro Nerd Font Mono
     # The `style` can be specified to pick a specific face.
     style: Italic
 
@@ -149,35 +154,35 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x1d1f21'
-    foreground: '0xc5c8c6'
+    background: '#1d1f21'
+    foreground: '#c5c8c6'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x1d1f21'
-    cursor: '0xffffff'
+    text: '#1d1f21'
+    cursor: '#ffffff'
 
   # Normal colors
   normal:
-    black:   '0x1d1f21'
-    red:     '0xcc6666'
-    green:   '0xb5bd68'
-    yellow:  '0xe6c547'
-    blue:    '0x81a2be'
-    magenta: '0xb294bb'
-    cyan:    '0x70c0ba'
-    white:   '0x373b41'
+    black:   '#1d1f21'
+    red:     '#cc6666'
+    green:   '#b5bd68'
+    yellow:  '#e6c547'
+    blue:    '#81a2be'
+    magenta: '#b294bb'
+    cyan:    '#70c0ba'
+    white:   '#373b41'
 
   # Bright colors
   bright:
-    black:   '0x666666'
-    red:     '0xff3334'
-    green:   '0x9ec400'
-    yellow:  '0xf0c674'
-    blue:    '0x81a2be'
-    magenta: '0xb77ee0'
-    cyan:    '0x54ced6'
-    white:   '0x282a2e'
+    black:   '#666666'
+    red:     '#ff3334'
+    green:   '#9ec400'
+    yellow:  '#f0c674'
+    blue:    '#81a2be'
+    magenta: '#b77ee0'
+    cyan:    '#54ced6'
+    white:   '#282a2e'
 
 # # Colors (Tomorrow Night Bright)
 # colors:
@@ -375,8 +380,8 @@ live_config_reload: true
 #
 shell:
 program: /usr/local/bin/fish
-args:
-  - --command='tmuxinator start terminals'
+# args:
+#   - --command='tmuxinator start terminals'
 
 # Key bindings
 #
