--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,3 +1,10 @@
+[git_metrics]
+added_style = "bold blue"
+format = '[+$added]($added_style)/[-$deleted]($deleted_style) '
+
+[git_branch]
+symbol = "🌱 "
+
 [git_status]
 conflicted = "🏳"
 ahead = "🏎💨"
