--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -319,7 +319,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
+window.opacity: 0.95
 
 # Mouse bindings
 #
@@ -352,7 +352,7 @@ selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
   # When set to `true`, selected text will be copied to the primary clipboard.
-  save_to_clipboard: false
+  save_to_clipboard: true
 
 window.dynamic_title: true
 
@@ -378,8 +378,8 @@ live_config_reload: true
 # You can set `shell.program` to the path of your favorite shell, e.g. `/bin/fish`.
 # Entries in `shell.args` are passed unmodified as arguments to the shell.
 #
-shell:
-program: /usr/local/bin/fish
+# shell:
+# program: /usr/local/bin/fish
 # args:
 #   - --command='tmuxinator start terminals'
 
