--- a/config/tmuxinator/terminals.yml
+++ b/config/tmuxinator/terminals.yml
@@ -25,7 +25,7 @@ name: 💻
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 # pre_window: rbenv shell 2.0.0-p247
 # pre_window: neofetch
-pre_window: nu
+# pre_window: nu
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
