--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -104,25 +104,25 @@ font:
   # Normal (roman) font face
   normal:
     # family: SauceCodePro Nerd Font Mono
-    family: Jetbrains Mono
+    family: JetbrainsMono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   # Italic font face
   bold:
-    family: Jetbrains Mono
+    family: JetbrainsMono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Bold
 
   # Italic font face
   italic:
     # family: Source Code Pro for Powerline
-    family: Jetbrains Mono
+    family: JetbrainsMono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Italic
 
   # Point size
-  size: 20.0
+  size: 22.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
