--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,18 +1,18 @@
 command_timeout = 1000
 # ~/.config/starship.toml
+
+[aws]
+disabled = true
+
 [character]
-success_symbol = "[➜](bold green) "
-error_symbol = "[✗](bold red) "
+success_symbol = ""
+error_symbol = ""
 
 [shell]
 disabled = false
 bash_indicator = "💩"
 fish_indicator = ""
 nu_indicator = ""
-
-[env_var.CUSTOMER]
-default = ""
-format = "[$env_value]($style)"
 
 [git_metrics]
 added_style = "bold blue"
@@ -33,21 +33,36 @@ staged = "➕"
 renamed = "👅"
 deleted = "🗑"
 
-# [gcloud]
+[gcloud]
+disabled = true
 # symbol = "🧿"
 # format = '[$symbol$account(@$domain)(\($project\))]($style) '
-[gcloud.region_aliases]
-europe-west3 = "frankfurt"
+# [gcloud.region_aliases]
+# europe-west3 = "frankfurt"
 
-# [azure]
-# disabled = false
+[azure]
+disabled = true
 # format = "on [$symbol($subscription)]($style) "
 # symbol = "🌊"
 # style = "blue bold"
 
-# [kubernetes]
+[java]
+# symbol = "🅺 "
+symbol = "☕"
+
+[kubernetes]
+disabled = true
 # format = 'on [☸ $context](dimmed blue) '
 # disabled = false
 # [kubernetes.context_aliases]
 # "aks-plattform42-prod-noea" = "enova-prod ️🚨"
 # "aks-plattform42-dev-noea" = "enova-dev"
+
+[package]
+disabled = true
+
+[ruby]
+symbol = "💎 "
+
+[rust]
+symbol = "🦀 "
